Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -243,7 +243,7 @@ html{
     overflow-x: hidden;
     width: 100%;
     height: 100%;
-    padding-top: 10%;
+    padding-top: 2%;
     margin-top: 30vh;
     z-index: 0;
     top: 0;
@@ -256,7 +256,7 @@ html{
     
     width: 32%;
     border-radius: 50%;
-    box-shadow: 0px 25px 50px 0px rgba(58, 50, 29, 0.37);
+    box-shadow: 0px 27px 50px 0px rgba(58, 50, 29, 0.37);
 
 }
 .parentImg span{
